test/tests/compiler/11_long_integers/valid/plx1_kw1_in_names.plx
pub fn main(none) i32 {
    bool1: i32 = 5
    cast1: i32 = 5
    i641: i32 = 10
    
    return bool1 + cast1 - i641
}
