test/tests/compiler/11_long_integers/invalid_parse/plx1_cast_no_type_1.plx
pub fn main(none) i32 {
    return cast(10)
}
